@@ -1,3 +1,8 @@
+2010-09-05  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/xlib-util.lisp (with-xlib-protect): Add a
+	with-simple-restart on top of body execution.
+
 2010-09-04  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm.lisp (main-loop): Protect all xlib functions with an
